syntax = "proto3";

package fileserviceproto;

option go_package = "/fileserviceproto";

import "google/protobuf/timestamp.proto";

service FileService {
  rpc GetChanged (GetChangedRequest) returns (GetChangedResponse);
}

message GetChangedRequest {
  google.protobuf.Timestamp since = 1;
}

message GetChangedResponse {
  repeated string deletedFileIds = 1;
  repeated File updatedFiles = 2;
  message File {
    string id = 1;
    string name = 2;
    string contentType = 3;
    string path = 4;
    int64 size = 5;
    bytes metadata = 6;
    string md5 = 7;
  }
}
